test/fail/exceptions/invalid_class.lily
#[
SyntaxError: 'Integer' is not a valid exception class.
    from invalid_class.lily:8:
]#

try:
    var v = 10
except Integer:
    var x = 11
